# helios

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  LICENSE.TXT  README.md  imgui.ini
Editor/: .gitignore  CMakeLists.txt  backup.yaml  imgui.ini  scene.yaml
Editor/resources/shaders/: EditorGrid.frag  EditorGrid.vert  EntityPicking.frag  EntityPicking.vert
Editor/src/: AssetsBrowser.cpp  AssetsBrowser.h  ComponentsBrowser.cpp  ComponentsBrowser.h  EditorApp.cpp  EditorLayer.cpp  EditorLayer.h  Project.cpp  Project.h
Helios/: .gitignore  CMakeLists.txt
Helios/resources/shaders/: 2DTexture.frag  2DTexture.vert  Lighting.frag  Lighting.vert  quad.frag  quad.vert  skybox.frag  skybox.vert  ui_quad.frag  ui_quad.vert
Helios/src/: hlpch.h
Helios/src/Helios/Assets/: Asset.h  AssetLibrary.cpp  AssetLibrary.h  AssetManager.cpp  AssetManager.h  Meshes.h
Helios/src/Helios/Core/: Application.cpp  Application.h  Core.h  EntryPoint.h  IOUtils.cpp  IOUtils.h  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  Math.h  SharedPtr.h  TimeStep.h  Window.cpp  Window.h
Helios/src/Helios/ECSComponents/: Components.h
Helios/src/Helios/Events/: Event.h  Input.cpp  Input.h  KeyCodes.h  KeyEvents.h  MouseEvents.h  WindowEvents.h
Helios/src/Helios/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
Helios/src/Helios/Physics/: Geometry.h  JoltImpls.cpp  JoltImpls.h  PhysicsBody.h  PhysicsManager.cpp  PhysicsManager.h  RigidBody.h  Shapes.h
Helios/src/Helios/Renderer/: Buffer.cpp  Buffer.h  CommandBuffer.cpp  CommandBuffer.h  DescriptorPool.cpp  DescriptorPool.h  DescriptorSet.cpp  DescriptorSet.h  DescriptorSetLayout.cpp  DescriptorSetLayout.h  Font.cpp  Font.h  FontLibrary.cpp  FontLibrary.h  Geometry.cpp  Geometry.h  Image.cpp  Image.h  IndexBuffer.cpp  IndexBuffer.h  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshVertex.h  Pipeline.cpp  Pipeline.h  Renderer.cpp  Renderer.h  Resource.h  Semaphore.cpp  Semaphore.h  Shader.cpp  Shader.h  ShaderLibrary.cpp  ShaderLibrary.h  SwapChain.cpp  SwapChain.h  Texture.cpp  (+11 more)
Helios/src/Helios/Scene/: Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  Entity.h  OrthographicCamera.cpp  OrthographicCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h  Scene.cpp  Scene.h  SceneCamera.cpp  SceneCamera.h  SceneSerializer.cpp  SceneSerializer.h  Transform.h
Helios/src/Helios/Scripting/: Script.cpp  Script.h  ScriptField.h  SerializableField.h
Helios/src/Helios/Scripting/ScriptUserTypes/: Components.cpp  Components.h  Entities.h  Entity.h  Input.cpp  Input.h  MeshRenderer.cpp  MeshRenderer.h  PhysicsBody.cpp  PhysicsBody.h  RigidBody.cpp  RigidBody.h  UI.h
Helios/src/Helios/Vulkan/: VulkanContext.h  VulkanManager.cpp  VulkanManager.h  VulkanUtils.cpp  VulkanUtils.h
Sandbox/: .gitignore  CMakeLists.txt  imgui.ini
Sandbox/resources/scripts/: test.lua
Sandbox/src/: SandboxApp.cpp  SandboxLayer.cpp  SandboxLayer.h
examples/book_of_shaders/: .gitignore  settings.proj
examples/book_of_shaders/materials/: 03.mat  05.mat  fbm.mat  interactions.mat
examples/book_of_shaders/scenes/: 03.scene  05.scene  cellular.scene  fbm_warped.scene  interaction.scene  main.scene  patterns.scene
examples/book_of_shaders/shaders/: 03.frag  03.frag.out  05.frag.out  cellular.frag  fbm_warped.frag  interactions.frag  patterns.frag
examples/bubble_sort_visualizer/: project.yaml  scene_copy.scene  scene_copy.yaml  settings.proj
examples/bubble_sort_visualizer/scenes/: main.scene  main_scene.yaml
examples/bubble_sort_visualizer/scripts/: imgui.ini  init.lua  main.lua
examples/character_controller/: settings.proj
examples/character_controller/scenes/: main.scene
examples/character_controller/scripts/: controller.lua
examples/example1/: .gitignore  project.yaml  scene_copy.scene  scene_copy.yaml  settings.proj
examples/example1/materials/: cube_mat.mat  viking_room.mat
examples/example1/scenes/: viking_rooms.scene  viking_rooms.yaml
examples/example1/scripts/: script copy.lua  script.lua
examples/example1/shaders/: custom_lighting.frag  custom_lighting.frag.out  custom_lighting.frag.spv
examples/physics_1/: project.yaml  scene_copy.yaml  settings.proj
examples/physics_1/materials/: box.mat  floor.mat
examples/physics_1/scenes/: main.scene  main.yaml
examples/physics_1/scripts/: bouncy.lua
examples/shader_collection/: .gitignore  README.md  settings.proj
examples/shader_collection/materials/: cellular.mat  fbm.mat  fbm_warped.mat  interactions.mat  patterns.mat
examples/shader_collection/materials/raymarching/: rm_1.mat  rm_2.mat
examples/shader_collection/scenes/: fbm.scene  fbm_warped.scene
examples/shader_collection/scenes/raymarching/: rm_1.scene  rm_2.scene
examples/shader_collection/scripts/raymarching/: rm_1.lua
examples/shader_collection/shaders/: cellular.frag  fbm.frag  fbm_warped.frag  interactions.frag  patterns.frag
examples/shader_collection/shaders/raymarching/: rm_1.frag  rm_1.vert  rm_1.vert.out  rm_2.frag
examples/test/: settings.proj
lua/: helios.lua  key_codes.lua
scripts/: build_editor.sh  build_helios.sh  build_physx.bat  build_physx.sh  build_sandbox.bat  build_sandbox.sh  compile_all.bat  compile_all.sh  compile_editor.bat  compile_editor.sh  compile_helios.bat  compile_helios.sh  compile_sandbox.bat  compile_sandbox.sh  compile_shaders.bat  compile_shaders.sh  delete_projects.bat  generate_projects.bat  run_editor.sh
